[gd_scene load_steps=21 format=2]

[ext_resource path="res://Enemy/Sprites/Enemy_Walk_04.png" type="Texture" id=1]
[ext_resource path="res://Enemy/enemy.gd" type="Script" id=2]
[ext_resource path="res://Enemy/Sprites/Enemy_Idle_04.png" type="Texture" id=3]
[ext_resource path="res://Systems/hitbox.tscn" type="PackedScene" id=4]

[sub_resource type="Shader" id=16]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment(){
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white = vec4(1.0,1.0,1.0, previous_color.a);
	vec4 new_color = previous_color;
	
	if(active){
		new_color = white;
	}
	
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=1]
shader = SubResource( 16 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Walk",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 6.41309, 7.6875 )

[sub_resource type="CapsuleShape2D" id=12]
radius = 8.01109
height = 4.15446

[sub_resource type="CircleShape2D" id=13]
radius = 49.3494

[sub_resource type="Animation" id=14]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=15]
resource_name = "Stop"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 8
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 10 )
animation = "Walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.375 )
shape = SubResource( 11 )

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EdgeCast" type="RayCast2D" parent="."]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 2

[node name="WallCast" type="RayCast2D" parent="."]
position = Vector2( 5, 0 )
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 2

[node name="HitBox" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 12 )

[node name="LineOfSight" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="LineOfSight"]
shape = SubResource( 13 )

[node name="HitAnimation" type="AnimationPlayer" parent="."]
autoplay = "Stop"
anims/Start = SubResource( 14 )
anims/Stop = SubResource( 15 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Label" type="Label" parent="."]
margin_left = -0.982147
margin_top = -21.3969
margin_right = 39.0179
margin_bottom = -7.3969
text = "t"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="PatrolTimer" to="." method="_on_PatrorlTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="body_entered" from="LineOfSight" to="." method="_on_LineOfSight_body_entered"]
[connection signal="body_exited" from="LineOfSight" to="." method="_on_LineOfSight_body_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]

[editable path="HitBox"]
